Fix footer overlapping issue and update index page

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,7 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
+    margin-top: auto;
 }
 
 .logo {
@@ -143,9 +144,5 @@ footer {
 
     .logo {
         max-width: 100px;
-    }
-
-    footer {
-        position: relative;
     }
 }
